fix: scrollbar issue

--- a/apps/client/src/styles.scss
+++ b/apps/client/src/styles.scss
@@ -4,3 +4,23 @@
 
 /* You can add global styles to this file, and also import other style files */
 @import '~@ng-select/ng-select/themes/default.theme.css';
+
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
